# compound-engineering

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  calculator.py  package.json
.claude-plugin/: marketplace.json
.claude/commands/: README.md  ce:calibrate.md  ce:compound.md  ce:retrospect.md  ce:review.md  ce:scaffold.md  ce:work.md
.github/: .release-please-manifest.json  release-please-config.json
.github/workflows/: ci.yml
ce_engine/: README.md  pyproject.toml
ce_engine/src/ce_engine/: __init__.py  cli.py  config.py  graph.py  nodes.py  prompts.py  state.py  toolchain.py  utils.py
ce_engine/tests/: __init__.py  conftest.py  test_graph.py  test_integration.py  test_nodes.py  test_state.py  test_toolchain.py
docs/brainstorms/: 2026-03-17-release-automation-requirements.md  2026-03-26-context-engineering-refactor-requirements.md  2026-03-27-python-tkinter-calculator-requirements.md
docs/plans/: 2026-03-17-001-feat-release-automation-migration-beta-plan.md  2026-03-25-001-refactor-ce-engine-pydantic-async-plan.md  2026-03-25-003-refactor-ce-engine-post-migration-cleanup-plan.md  2026-03-26-001-feat-compound-feedback-loop-plan.md  2026-03-26-001-refactor-context-engineering-plan.md  2026-03-26-002-feat-add-ce-guided-and-subagent-specialization-plan.md  2026-03-26-003-refactor-complete-ce-plan-template-end-state-section-plan.md  2026-03-27-001-feat-python-tkinter-calculator-beta-plan.md
docs/research/: README.md
docs/solutions/: plugin-versioning-requirements.md  schema-prevention-strategies.md
dscv_spec/: contextSpec.md
plugins/compound-engineering/: AGENTS.md  README.md
(+39 files in other folders)
