[project]
name = "ce-engine"
version = "0.1.0"
description = "LangGraph work execution engine for Compound Engineering"
readme = "README.md"
authors = [
    { name = "dscv103", email = "derek.vitrano@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.13.0",
    "langchain-anthropic>=1.4.0",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0",
    "tenacity>=9.0.0",
]

[project.scripts]
ce-work = "ce_engine.cli:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.15.7",
    "ty>=0.0.25",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
